<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:maxHeight="250dp"
        android:src="@drawable/teplomer"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_celsius"
            android:ems="10"
            android:id="@+id/et_first"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_input"
            android:textSize="40dp"
            android:text="@string/tv_cels"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/et_second"
            android:inputType="none"
            android:editable="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:id="@+id/tv_output"
            android:text="@string/tv_farent"/>
    </LinearLayout>





    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_first"
            android:text="@string/rb_CF"
            android:checked="true"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_FC"
            android:id="@+id/rb_second"
            />
    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn_prevod"
        android:id="@+id/btn_prevod"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_teplota"
        android:textSize="20dp"
        />
    <Switch
        android:id="@+id/sw_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_vzdialenost"
        android:textSize="20dp"
        />
</LinearLayout>



</LinearLayout>